jcplayer/src/main/java/com/example/jean/jcplayer/general/errors/JcpServiceDisconnectedError.kt
package com.example.jean.jcplayer.general.errors


object JcpServiceDisconnectedError : Throwable()